--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<li>Will we be meeting on zoom or irl? </li>
 	</ul>
 	<h3>Pictures</h3>
-	<img src="screenshots/example.png" width=500>
+	<img src="screenshots/example.png" alt="Picture" width="500">
 	<h3>Audio</h3>
 	<audio controls>
 		<source src="IMG_8502.mp3" type="audio/mp3">
@@ -34,5 +34,6 @@
 	<h3>Video</h3>
 	<video width="500" controls>
 		<source src="IMG_8502.mp4" type="video/mp4">
+	</video>
   </body>
 </html>
