--- a/index.html
+++ b/index.html
@@ -2,38 +2,111 @@
 <html lang="en">
   <head>
     <title>Meeting Minutes</title>
+	<meta charset="UTF-8">
+	<link rel="icon" type="image/x-icon" href="/icons8-meeting-16.png">
   </head>
   <body>
-	<h1>Meeting Minutes</h1>
-	<h2>Brainstorming</h2>
-	<h2>10/9/22</h2>
-	<h3>Attendance</h3>
-	<ul>
-		<li>Jonathan </li>
-		<li>Guan </li>
-		<li>Powell </li>
-	</ul>
-	<h3>Agenda</h3>
-	<p>Today's meeting will be an open forum brainstorm for what 
-		kinds of projects we want to work on. </p>
-	<h3>Unfinished Business</h3>
-	<p>We need to finish up last week's documentation of requirements.</p>
-	<h3>New Business</h3>
-	<p>Let's setup git and our project startup.</p>
-	<h3>Miscellaneous Comments/Questions/Concerns</h3>
-	<ul>
-		<li>What time will our weekly stand up be? </li>
-		<li>Will we be meeting on zoom or irl? </li>
-	</ul>
-	<h3>Pictures</h3>
-	<img src="screenshots/example.png" alt="Picture" width="500">
-	<h3>Audio</h3>
-	<audio controls>
-		<source src="IMG_8502.mp3" type="audio/mp3">
-	</audio>
-	<h3>Video</h3>
-	<video width="500" controls>
-		<source src="IMG_8502.mp4" type="video/mp4">
-	</video>
+	<main>
+		<header>Meeting Minutes</header>
+		<hr>
+		<br>
+		<nav>
+			<a href="">Meetings</a> |
+			<a href="">Settings</a> 
+		</nav>
+		<section>
+			<h1>Meeting Minutes</h1>
+			<h2>Brainstorming</h2>
+			<h2>10/9/22</h2>
+			<a href="https://github.com/jonathaanh/Lab2_Starter">Link to Github</a>
+		</section>
+		<hr>
+		<section>
+		<h3>Attendance</h3>
+			<ul>
+				<li><i>Jonathan</i></li>
+				<li>Guan </li>
+				<li><em>Powell</em> </li>
+			</ul>
+		</section>
+		<section>
+			<div>
+				<h3>Agenda</h3>
+				<b>Today's meeting will be an open forum brainstorm for what 
+					kinds of projects we want to work on. 
+				</b>
+			</div>
+		</section>
+		<section>
+			<span>
+				<h3>Unfinished Business</h3>
+				<strong>We need to finish up last week's documentation of requirements.</strong>
+			</span>
+		</section>
+		<section>
+			<h3>New Business</h3>
+			<p>Let's setup git and our project startup.</p>
+		</section>
+		<section>
+			<h3>Miscellaneous Comments/Questions/Concerns</h3>
+			<ol>
+				<li>What time will our weekly stand up be? </li>
+				<li>Will we be meeting on zoom or irl? </li>
+			</ol>
+		</section>
+		<section>
+			<h3>Pictures</h3>
+			<img src="screenshots/example.png" alt="Picture" width="500">
+		</section>
+		<section>
+			<h3>Audio</h3>
+			<audio controls>
+				<source src="IMG_8502.mp3" type="audio/mp3">
+			</audio>
+		</section>
+		<section>
+			<h3>Video</h3>
+			<video width="500" controls>
+				<source src="IMG_8502.mp4" type="video/mp4">
+			</video>
+		</section>
+		<br>
+		<br>
+		<section>
+			<h3>Log Notes</h3>
+			<form>
+				<fieldset>
+					<label>Name:</label><br>
+					<input type="text"><br>
+					<label for="college">Choose a college:</label>
+					<select>
+					<option>Warren</option>
+					<option>Seventh</option>
+					<option>Sixth</option>
+					<option>Muir</option>
+					</select>
+					<br>
+					<label >Choose your class from the list:</label><br>
+					<input list="classes"><br>
+					<datalist id="classes">
+						<option value="CSE110">
+						<option value="CSE101">
+						<option value="CSE151b">
+					</datalist>
+					<labe>Message</label><br>
+					<textarea type="text"></textarea><br>
+					<button>Submit</button>
+				</fieldset>
+			  </form>
+		</section>
+		<br>
+		<hr>
+		<footer>
+			<details>
+				<summary>Meeting Minutes</summary>
+				<p>This page is intended to serve as my meeting minutes website for CSE110 HW2 </p>
+			  </details>
+		</footer>
+	</main>
   </body>
 </html>
