--- a/index.html
+++ b/index.html
@@ -4,38 +4,40 @@
     <title>Meeting Minutes</title>
 	<meta charset="UTF-8">
 	<link rel="icon" type="image/x-icon" href="/icons8-meeting-16.png">
+	<link rel="stylesheet" type="text/css" href="styles.css" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
   </head>
   <body>
 	<main>
-		<header>Meeting Minutes</header>
+		<div>
+			<header>Meeting Minutes</header>
+		</div>
 		<hr>
-		<br>
 		<nav>
 			<a href="">Meetings</a> |
 			<a href="">Settings</a> 
 		</nav>
-		<section>
+		<div class="header">
 			<h1>Meeting Minutes</h1>
-			<h2>Brainstorming</h2>
-			<h2>10/9/22</h2>
-			<a href="https://github.com/jonathaanh/Lab2_Starter">Link to Github</a>
-		</section>
-		<hr>
+			<h2>Topic: Brainstorming</h2>
+			<h2>Date: 10/9/22</h2>
+			<a href="https://github.com/jonathaanh/">Link to Github</a>
+		</div>
 		<section>
-		<h3>Attendance</h3>
-			<ul>
-				<li><i>Jonathan</i></li>
-				<li>Guan </li>
-				<li><em>Powell</em> </li>
-			</ul>
+			<h3>Attendance</h3>
+				<ul>
+					<li><i>Jonathan</i></li>
+					<li>Guan </li>
+					<li><em>Powell</em> </li>
+				</ul>
 		</section>
 		<section>
-			<div>
 				<h3>Agenda</h3>
 				<b>Today's meeting will be an open forum brainstorm for what 
 					kinds of projects we want to work on. 
 				</b>
-			</div>
 		</section>
 		<section>
 			<span>
@@ -72,7 +74,7 @@
 		</section>
 		<br>
 		<br>
-		<section>
+		<section id="lognotes">
 			<h3>Log Notes</h3>
 			<form>
 				<fieldset>
